# hyperlight-unikraft

./: .gitignore  README.md
.github/workflows/: host-checks.yml  publish-examples.yml  test-examples.yml
demos/pptx-gen/: Dockerfile.rootfs  kraft.yaml
demos/pptx-gen/src/: main.rs
examples/: common.mk
examples/dotnet/: Dockerfile  Justfile  Makefile  kraft.yaml
examples/dotnet-nativeaot/: HelloNativeAot.csproj  Justfile  Makefile  Program.cs  kraft.yaml
examples/go/: .config.go-hyperlight_hyperlight-x86_64  .config.go-hyperlight_hyperlight-x86_64.old  Dockerfile  Justfile  Makefile  kraft.yaml
examples/helloworld-c/: .config.helloworld-hyperlight_hyperlight-x86_64  .config.helloworld-hyperlight_hyperlight-x86_64.old  Justfile  Makefile  hello  hello.c  kraft.yaml
examples/hostfs-c/: Dockerfile  Justfile  hcall.c  hcall.h  hello.c  kraft.yaml
examples/hostfs-posix-c/: hello.c  kraft.yaml
examples/hostfs-posix-py/: Justfile  kraft.yaml
examples/hostfs-py/: Dockerfile  Justfile  hostfs_demo.py  hyperlight.py  kraft.yaml
examples/multifn-c/: kraft.yaml
examples/nodejs/: .config.nodejs-hyperlight_hyperlight-x86_64  .config.nodejs-hyperlight_hyperlight-x86_64.old  Dockerfile  Justfile  Makefile  kraft.yaml
examples/powershell/: Dockerfile  Justfile  Makefile  kraft.yaml
examples/python/: .config.python-hyperlight_hyperlight-x86_64  .config.python-hyperlight_hyperlight-x86_64.old  Dockerfile  Justfile  Makefile  kraft.yaml
examples/python-agent/: Dockerfile  Justfile  agent.py  kraft.yaml
examples/python-agent-driver/: Dockerfile  hl_pydriver.c  kraft.yaml
examples/python-agent-multifn/: Dockerfile  hl_pydriver.c  kraft.yaml
examples/python-tools/: Dockerfile  Justfile  Makefile  hyperlight.py  kraft.yaml
examples/rust/: .config.rust-hyperlight_hyperlight-x86_64  .config.rust-hyperlight_hyperlight-x86_64.old  Justfile  Makefile  hello  kraft.yaml
examples/shell/: Dockerfile  Justfile  Makefile  kraft.yaml
host/: Cargo.toml
host/src/: ffi.rs  lib.rs  main.rs  pyhl.rs  stderr_capture.rs
host/tests/: snapshot_roundtrip.rs
runtimes/: dotnet.Dockerfile  python.Dockerfile
