[package]
name = "hyperlight-unikraft-host"
version = "0.1.0"
edition = "2021"
description = "Embedded Hyperlight host for running Unikraft unikernels"
license = "MIT OR Apache-2.0"

[lib]
name = "hyperlight_unikraft"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "hyperlight-unikraft"
path = "src/main.rs"

[dependencies]
hyperlight-host = { version = "0.14.0", features = ["executable_heap"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
memmap2 = "0.9"
serde_json = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
] }
