[package]
name = "hyperlight-unikraft-host"
version = "0.1.0"
edition = "2021"
description = "Embedded Hyperlight host for running Unikraft unikernels"
license = "MIT OR Apache-2.0"

[lib]
name = "hyperlight_unikraft"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "hyperlight-unikraft"
path = "src/main.rs"

[dependencies]
# Use git dep until 0.14.1 is released with the Windows map_file_cow +
# IO access size fixes (PRs #1386 and #1387).
hyperlight-host = { git = "https://github.com/hyperlight-dev/hyperlight", branch = "main", features = ["executable_heap"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
memmap2 = "0.9"
serde_json = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

