[package]
name = "hyperlight-unikraft-host"
version = "0.1.0"
edition = "2021"
description = "Embedded Hyperlight host for running Unikraft unikernels"
license = "MIT OR Apache-2.0"

[lib]
name = "hyperlight_unikraft"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "hyperlight-unikraft"
path = "src/main.rs"

[[bin]]
name = "multifn-test"
path = "src/bin/multifn_test.rs"

[dependencies]
# Temporarily point at danbugs/hyperlight fix-map-file-cow-unaligned while
# hyperlight-dev/hyperlight#1388 is in review. That branch is upstream `main`
# plus the unaligned map_file_cow fix, without which initrd cpios whose size
# is not a multiple of the page size fail to map on Windows. Revert to
# hyperlight-dev/hyperlight `main` once #1388 merges.
hyperlight-host = { git = "https://github.com/danbugs/hyperlight", branch = "fix-map-file-cow-unaligned", features = ["executable_heap"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
memmap2 = "0.9"
serde_json = "1"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

